--- a/刨根问底/19092502什么是redis缓存传统和缓存雪崩，如何解决？.md
+++ b/刨根问底/19092502什么是redis缓存传统和缓存雪崩，如何解决？.md
@@ -6,7 +6,7 @@
 
 ​    一般的缓存系统，都是按照key值去缓存查询，如果不存在对应的value，就应该去DB中查找 。这个时候，如果请求的并发量很大，就会对后端的DB系统造成很大的压力。这就叫做缓存穿透。关键词：缓存value为空；并发量很大去访问DB。
 
-![img](img/007FyU7Tgy1g1uzgm6rc9j307t09a749.jpg)
+![img](E:/BCC-Server/blog/source/_posts/a-id-4/007FyU7Tgy1g1uzgm6rc9j307t09a749.jpg)
 
 ### 造成原因
 
@@ -21,7 +21,7 @@
 
 【设置布隆过滤器，将所有可能存在的数据哈希到一个足够大的bitmap中，一个一定不存在的数据会被这个bitmap拦截掉，从避免了对底层存储系统的查询压力。】
 
-![img](img/007FyU7Tgy1g1uzmo1u6ij30a00ayjri.jpg)
+![img](E:/BCC-Server/blog/source/_posts/a-id-4/007FyU7Tgy1g1uzmo1u6ij30a00ayjri.jpg)
 
 
 
@@ -31,7 +31,7 @@
 
 如果一个查询返回的数据为空，不管是数据不存在还是系统故障，我们仍然把这个结果进行缓存，但是它的过期时间会很短最长不超过5分钟。
 
-![img](img/007FyU7Tgy1g1uzoeoa6dj308i0a174b.jpg)
+![img](E:/BCC-Server/blog/source/_posts/a-id-4/007FyU7Tgy1g1uzoeoa6dj308i0a174b.jpg)
 
 但是这种方法会存在两个问题：
 
@@ -40,7 +40,7 @@
 
 #### 比较
 
-![img](img/007FyU7Tgy1g1uzn7au5cj30hi05w74s.jpg)
+![img](E:/BCC-Server/blog/source/_posts/a-id-4/007FyU7Tgy1g1uzn7au5cj30hi05w74s.jpg)
 
 ## 缓存雪崩
 
@@ -51,7 +51,7 @@
 存在这种问题的一个场景是：当缓存服务器重启或者大量缓存集中在某一个时间段失效，这样在失效的时候，大量数据会去直接访问DB，此时给DB很大的压力。
 
 
-![img](img/007FyU7Tgy1g1uzuwifjbj30ho0apglx.jpg)
+![img](E:/BCC-Server/blog/source/_posts/a-id-4/007FyU7Tgy1g1uzuwifjbj30ho0apglx.jpg)
 
 ### 解决方案
 
