--- a/Redis数据库/1.Redis-介绍.md
+++ b/Redis数据库/1.Redis-介绍.md
@@ -59,9 +59,9 @@ Redis与其他 key  -  Value缓存产品有以下三个特点
 
 - 丰富的特性- Redis还支持publish/subscribe ， 通知 ， key过期等特性。
 
-###Redis应用场景
+### Redis应用场景
 
-- 用老做缓存（encache/memcached） --- redis的所有数据都放在内存中的（内存数据库）
+- 用来做缓存（encache/memcached） --- redis的所有数据都放在内存中的（内存数据库）
 - 可以在某些特定应用场景下代替传统数据库 --- 比如社交类的应用。
 - 在一些大型系统中，巧妙地实现一些特定的功能：session 、 购物车 
 - 只要你有丰富的想象力 ，redis可以用在任何地方，给你无限的惊喜.......
