--- a/大实训笔记/微服务架构.md
+++ b/大实训笔记/微服务架构.md
@@ -50,49 +50,52 @@ pip3 install thriftpy2
 
 定义服务 ：  thrift 方法    定义接口
 
+```
 service Test {
 
-​	string ping(),      
+	string ping(),      
 
 }
 
+```
+
 返回值 string  数据类型字符串   pingf=方法名称   （） 里面放参数
-
-
 
 二 、创建 一个thriftpy_server.py 
 
-
-
 //导包 thriftpy第二代版本
 
-import thriftpy2 
+`import thriftpy2 `
 
 定义服务
 
-test_thrift  = thriftpy2.load("test.thrift",module_name = "test_thrift")
+`test_thrift  = thriftpy2.load("test.thrift",module_name = "test_thrift")`
 
 导入rpc协议
 
+```
 from thriftpy.rpv import make_server 
 
 
 
 class Dispatvher(object):
 
-​	def ping(self):
+	def ping(self):
 
-​		return '123'
+		return '123'
 
-
+```
 
 启动服务
 
+```
 main 
 
 server = make_server(test_thrift.Test,Dispatcher(),'127.0.0.1',6000)
 
 server.serve()
+
+```
 
 三、进入命令行
 
