--- a/大实训笔记/进程，线程，协程.md
+++ b/大实训笔记/进程，线程，协程.md
@@ -19,44 +19,69 @@ greenlet  gevent  生成器    特殊的迭代器 性能高  内部封装iter ne
 yield返回状态  快  灵活
 return返回结果
 
-# #可迭代对象   迭代器
-# s = 'abc'
-# it = iter(s)
-# for x in it:
-#     print(x)
+可迭代对象   迭代器
+
+s = 'abc'
+
+it = iter(s)
+
+for x in it:
+
+print(x)
+
 #
 #
-# # print(it)
-# # print(next(it))
-# # print(next(it))
-# # print(next(it))
-# # print(next(it))
 
-#生成器  对2取余等于true   求奇数
-# def get_odd(lst):
-#     res = []
-#     for x in lst:
-#         if x % 2:
-#             res.append(x)
-#     return res
-# #重写
-# def get_odd(lst):
-#     for x in lst:
-#         if x % 2:
-#             yield x
+print(it)
+
+print(next(it))
+
+print(next(it))
+
+print(next(it))
+
+print(next(it))
+
+生成器  对2取余等于true   求奇数
+
+def get_odd(lst):
+
+res = []
+
+for x in lst:
+
+if x % 2:
+
+res.append(x)
+
+return res
+
+重写
+
+def get_odd(lst):
+
+for x in lst:
+
+if x % 2:
+
+yield x
+
 #
-# mylist = get_odd(range(5))
-# for x in mylist:
-#     print(x)
 
+mylist = get_odd(range(5))
 
-#协成
+for x in mylist:
+
+print(x)
+
+协成
+
 import time
 import asyncio
 async def job(t):
     # time.sleep(t)
-    asyncio.sleep(t)
-    print('用了%s秒' % t)
+​    asyncio.sleep(t)
+​    print('用了%s秒' % t)
 
 async def main(loop):           #异步 使用 async 关键字将一个函数定义为协程
     # [job(t) for t in range(1,3)]    #执行两个任务
